frame/support/test/tests/construct_runtime_ui/undefined_inherent_part.stderr
error: `Pallet` does not have #[pallet::inherent] defined, perhaps you should remove `Inherent` from construct_runtime?
  --> tests/construct_runtime_ui/undefined_inherent_part.rs:5:1
   |
5  |   #[frame_support::pallet]
   |   ^^^^^^^^^^^^^^^^^^^^^^^^
...
49 | / construct_runtime! {
50 | |     pub enum Runtime where
51 | |         Block = Block,
52 | |         NodeBlock = Block,
...  |
57 | |     }
58 | | }
   | |_- in this macro invocation
   |
   = note: this error originates in the macro `pallet::__substrate_inherent_check::is_inherent_part_defined` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no function or associated item named `create_inherent` found for struct `pallet::Pallet` in the current scope
  --> tests/construct_runtime_ui/undefined_inherent_part.rs:49:1
   |
11 |       pub struct Pallet<T>(_);
   |       ------------------------ function or associated item `create_inherent` not found for this
...
49 | / construct_runtime! {
50 | |     pub enum Runtime where
51 | |         Block = Block,
52 | |         NodeBlock = Block,
...  |
57 | |     }
58 | | }
   | |_^ function or associated item not found in `pallet::Pallet<Runtime>`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `create_inherent`, perhaps you need to implement it:
           candidate #1: `ProvideInherent`
   = note: this error originates in the macro `construct_runtime` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no function or associated item named `is_inherent` found for struct `pallet::Pallet` in the current scope
  --> tests/construct_runtime_ui/undefined_inherent_part.rs:49:1
   |
11 |       pub struct Pallet<T>(_);
   |       ------------------------ function or associated item `is_inherent` not found for this
...
49 | / construct_runtime! {
50 | |     pub enum Runtime where
51 | |         Block = Block,
52 | |         NodeBlock = Block,
...  |
57 | |     }
58 | | }
   | |_^ function or associated item not found in `pallet::Pallet<Runtime>`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `is_inherent`, perhaps you need to implement it:
           candidate #1: `ProvideInherent`
   = note: this error originates in the macro `construct_runtime` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no function or associated item named `check_inherent` found for struct `pallet::Pallet` in the current scope
  --> tests/construct_runtime_ui/undefined_inherent_part.rs:49:1
   |
11 |       pub struct Pallet<T>(_);
   |       ------------------------ function or associated item `check_inherent` not found for this
...
49 | / construct_runtime! {
50 | |     pub enum Runtime where
51 | |         Block = Block,
52 | |         NodeBlock = Block,
...  |
57 | |     }
58 | | }
   | |_^ function or associated item not found in `pallet::Pallet<Runtime>`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `check_inherent`, perhaps you need to implement it:
           candidate #1: `ProvideInherent`
   = note: this error originates in the macro `construct_runtime` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no associated item named `INHERENT_IDENTIFIER` found for struct `pallet::Pallet` in the current scope
  --> tests/construct_runtime_ui/undefined_inherent_part.rs:49:1
   |
11 |       pub struct Pallet<T>(_);
   |       ------------------------ associated item `INHERENT_IDENTIFIER` not found for this
...
49 | / construct_runtime! {
50 | |     pub enum Runtime where
51 | |         Block = Block,
52 | |         NodeBlock = Block,
...  |
57 | |     }
58 | | }
   | |_^ associated item not found in `pallet::Pallet<Runtime>`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `INHERENT_IDENTIFIER`, perhaps you need to implement it:
           candidate #1: `ProvideInherent`
   = note: this error originates in the macro `construct_runtime` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no function or associated item named `is_inherent_required` found for struct `pallet::Pallet` in the current scope
  --> tests/construct_runtime_ui/undefined_inherent_part.rs:49:1
   |
11 |       pub struct Pallet<T>(_);
   |       ------------------------ function or associated item `is_inherent_required` not found for this
...
49 | / construct_runtime! {
50 | |     pub enum Runtime where
51 | |         Block = Block,
52 | |         NodeBlock = Block,
...  |
57 | |     }
58 | | }
   | |_^ function or associated item not found in `pallet::Pallet<Runtime>`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `is_inherent_required`, perhaps you need to implement it:
           candidate #1: `ProvideInherent`
   = note: this error originates in the macro `construct_runtime` (in Nightly builds, run with -Z macro-backtrace for more info)
